<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">My Nanodegree Apps!</string>
    <string name="spotify_app">Spotify Streamer</string>
    <string name="score_app">Scores App</string>
    <string name="lib_app">Library App</string>
    <string name="bigger_app">Build It Bigger</string>
    <string name="xyz_app">XYZ Reader</string>
    <string name="capstone_app">Capstone: My Own App</string>
    <string name="toast">This button will launch %1$s!</string>
</resources>
