<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/welcome"
                android:id="@+id/textView"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:text="@string/spotify_app"
                android:id="@+id/spotify_streamer"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:background="@color/spotify"
                android:textColor="@color/text"
                android:layout_marginTop="@dimen/btn_margin_top1"
                android:shadowColor="@color/button_material_dark"
                android:onClick="clickOnBtn" />

            <Button
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:text="@string/score_app"
                android:id="@+id/scores_app"
                android:layout_below="@+id/spotify_streamer"
                android:layout_centerHorizontal="true"
                android:background="@color/score"
                android:textColor="@color/text"
                android:layout_marginTop="@dimen/btn_margin_top2"
                android:shadowColor="@color/button_material_dark"
                android:onClick="clickOnBtn" />

            <Button
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:text="@string/lib_app"
                android:id="@+id/library_app"
                android:layout_below="@+id/scores_app"
                android:layout_centerHorizontal="true"
                android:background="@color/library"
                android:textColor="@color/text"
                android:layout_marginTop="@dimen/btn_margin_top2"
                android:shadowColor="@color/button_material_dark"
                android:onClick="clickOnBtn" />

            <Button
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:text="@string/bigger_app"
                android:id="@+id/build_it_bigger"
                android:layout_below="@+id/library_app"
                android:layout_centerHorizontal="true"
                android:background="@color/bigger"
                android:textColor="@color/text"
                android:layout_marginTop="@dimen/btn_margin_top2"
                android:shadowColor="@color/button_material_dark"
                android:onClick="clickOnBtn" />

            <Button
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:text="@string/xyz_app"
                android:id="@+id/xyz_reader"
                android:background="@color/xyz"
                android:textColor="@color/text"
                android:shadowColor="@color/button_material_dark"
                android:layout_below="@+id/build_it_bigger"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/btn_margin_top2"
                android:onClick="clickOnBtn" />

            <Button
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:text="@string/capstone_app"
                android:id="@+id/capstone"
                android:layout_below="@+id/xyz_reader"
                android:layout_centerHorizontal="true"
                android:background="@color/capstone"
                android:textColor="@color/text"
                android:layout_marginTop="@dimen/btn_margin_top2"
                android:shadowColor="@color/button_material_dark"
                android:onClick="clickOnBtn" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>

